styling got better

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,10 @@
-
+<app-header [sticky]="true">
+  <div>hello</div>
+  <div></div>
+  <div>hello</div>
+  <div></div>
+  <div>hello</div>
+</app-header>
 <app-canvas>
   <app-grid [columns]="['1fr', '3fr', '1fr']">
     <div>hello</div>
@@ -38,3 +44,4 @@
   <button (click)="switchToLight()">Light Theme</button>
   <button (click)="switchToDark()">Dark Theme</button>
 </app-canvas>
+<app-section></app-section>
