--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,1 +1,4 @@
-<ng-content></ng-content>
+<ng-content select="[card-image]"></ng-content>
+<ng-content select="[card-title]"></ng-content>
+<ng-content select="[card-content]"></ng-content>
+<ng-content select="[card-actions]"></ng-content>
